--- a/vercel.json
+++ b/vercel.json
@@ -3,60 +3,18 @@
   "trailingSlash": false,
   "rewrites": [
     {
-      "source": "/",
+      "source": "/:path*",
       "has": [
         {
           "type": "host",
           "value": "studfinder.appcellent.co"
         }
       ],
-      "destination": "/studfinder/index.html"
+      "destination": "/studfinder/:path*"
     },
     {
-      "source": "/privacy",
-      "has": [
-        {
-          "type": "host",
-          "value": "studfinder.appcellent.co"
-        }
-      ],
-      "destination": "/studfinder/privacy.html"
-    },
-    {
-      "source": "/terms",
-      "has": [
-        {
-          "type": "host",
-          "value": "studfinder.appcellent.co"
-        }
-      ],
-      "destination": "/studfinder/terms.html"
-    },
-    {
-      "source": "/faq",
-      "has": [
-        {
-          "type": "host",
-          "value": "studfinder.appcellent.co"
-        }
-      ],
-      "destination": "/studfinder/faq.html"
-    },
-    {
-      "source": "/studfinder",
-      "destination": "/studfinder/index.html"
-    },
-    {
-      "source": "/studfinder/privacy",
-      "destination": "/studfinder/privacy.html"
-    },
-    {
-      "source": "/studfinder/terms",
-      "destination": "/studfinder/terms.html"
-    },
-    {
-      "source": "/studfinder/faq",
-      "destination": "/studfinder/faq.html"
+      "source": "/studfinder/:path*",
+      "destination": "/studfinder/:path*"
     }
   ]
 }
